obrazki - alt i wymiary

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
     <header>
-        <!-- czy header moze sie po divie  zaczynać?? -->
+        <!-- czy header moze sie po divie  zaczynać, nie bo «B7» Tag <nav> został użyty raz na stronie - w <header>.?? i «B8» Kontakty w <header> (poczta i telefon) znajdują się poza tagiem <nav>. -->
         <div class="menu">
             <a href=""><span>Web</span>Studio</a>
             <nav>
@@ -35,62 +35,66 @@
         <!-- nagłówek jest wymagany w section, a tu nie ma, w article tez wymagany..Jeśli nie udaje się nadać grupie treści rozsądnej nazwy (nie „prawej kolumny”, ale mającej sens) - jest to<div> i najprawdopodobniej jest potrzebny po prostu wspólny kontener do stylizacji. -->
 
         <!-- algorytm wyboru znacznika - zaj 1 znaczniki strukturalne -->
+
+        <!-- czy na to LOREM IPSUM też powinna byc lista? czy divy?-->
+
+        <!-- h3, h6 czy jakis wiekszy? w kolejnosci 1-6? -->
+
         <div id="atuty">
-            <h6>LOREM IPSUM</h6>
+            <h3>LOREM IPSUM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste
                 eos, nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore
                 vel.</p>
 
-            <h6>LOREM IPSUM</h6>
+            <h3>LOREM IPSUM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste
                 eos,
                 nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
             </p>
 
-            <h6>LOREM IPSUM</h6>
+            <h3>LOREM IPSUM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste
                 eos,
                 nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
             </p>
 
-            <h6>LOREM IPSUM</h6>
+            <h3>LOREM IPSUM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste
                 eos,
                 nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
             </p>
         </div>
-
+        
         <section id="review">
             <h2>Czym się zajmujemy</h2>
-                                               <!-- opisy alt -->
-            <img src="images/img1.jpg" alt="Image example" width="200" height="150" />
-            <img src="images/img2.jpg" alt="Image example" width="200" height="150" />
-            <img src="images/img3.jpg" alt="dobieranie szaty graficznej" width="200" height="150" />
+            <img src="images/img1.jpg" alt="podpowiadamy rozwiązania" width="370" height="294" />
+            <img src="images/img2.jpg" alt="dbamy o responsywność" width="370" height="294" />
+            <img src="images/img3.jpg" alt="dobieramy szatę graficzną" width="370" height="294" />
         </section>
 
         <section>
             <h2>Nasz zespół</h2>
             <ul class="cards">
                 <li class="card">
-                    <img src="images/team1.jpg" alt="Product Designer" width="150">
+                    <img src="images/team1.jpg" alt="Product Designer" width="270" height="260" />
                     <h4>John Doe</h4>
                     <p>Product Designer</p>
                 </li>
 
                 <li class="card">
-                    <img src="images/team2.jpg" alt="Frontend Developer" width="150">
+                    <img src="images/team2.jpg" alt="Frontend Developer" width="270" height="260" />
                     <h4>John Doe</h4>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li class="card">
-                    <img src="images/team3.jpg" alt="Marketing" width="150">
+                    <img src="images/team3.jpg" alt="Marketing" width="270" height="260" />
                     <h4>John Doe</h4>
                     <p>Marketing</p>
                 </li>
 
                 <li class="card">
-                    <img src="images/team4.jpg" alt="UI Designer" width="150">
+                    <img src="images/team4.jpg" alt="UI Designer" width="270" height="260" />
                     <h4>John Doe</h4>
                     <p>UI Designer</p>
                 </li>
