--- a/index.html
+++ b/index.html
@@ -1,122 +1,173 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href=""><span>Web</span>Studio</a>
-        <nav>
-            <ul>
-                <li><a href="#">Agencja</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
-        </nav>
+      <a href=""><span>Web</span>Studio</a>
+      <nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-        </ul>    
+          <li><a href="#">Agencja</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+      </ul>
     </header>
 
     <main>
-        <!-- header -->
-        <section>
+      <!-- header -->
+      <section>
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługę</button>
-        </section>
-        <!-- nasze atuty -->
-        <!-- moze dodac to do sekcji wyzej albo nizej?? -->
-        <div>
-            <ul>
-                <li>
-                    <h3>LOREM IPSUM</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
-                    </p>
-                </li>
-                <li>
-                    <h3>LOREM IPSUM</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
-                    </p>
-                </li>
-                <li>
-                    <h3>LOREM IPSUM</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
-                    </p>
-                </li>
-                <li>
-                    <h3>LOREM IPSUM</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim error saepe. Ratione tenetur non corporis, ea excepturi aperiam laudantium tempore vel.
-                    </p>
-                </li>
-            </ul>
-        </div>
-        
-        <!-- Czym się zajmujemy -->
-        <section>
-            <h2>Czym się zajmujemy</h2>
-            <ul>
-                <li>
-                    <img src="/images/czymsiezajmujemy/czym-img1.jpg" alt="podpowiadamy rozwiązania" width="370" height="294">
-                </li>
-                <li>
-                    <img src="/images/czymsiezajmujemy/czym-img2.jpg" alt="dbamy o responsywność" width="370" height="294">
-                </li>
-                <li>
-                    <img src="/images/czymsiezajmujemy/czym-img3.jpg" alt="dobieramy szatę graficzną" width="370" height="294">
-                </li>
-            </ul>
-        </section>
+      </section>
+      <!-- nasze atuty -->
+      <!-- moze dodac to do sekcji wyzej albo nizej?? -->
+      <div>
+        <ul>
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
+              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
+              laudantium tempore vel.
+            </p>
+          </li>
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
+              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
+              laudantium tempore vel.
+            </p>
+          </li>
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
+              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
+              laudantium tempore vel.
+            </p>
+          </li>
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
+              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
+              laudantium tempore vel.
+            </p>
+          </li>
+        </ul>
+      </div>
 
-        <!-- Nasz zespół -->
-        <section>
-            <h2>Nasz zespół</h2>
-            <ul>
-                <li>
-                    <img src="/images/naszzespol/team1.jpg" alt="John Doe - Product Designer" width="270" height="260" >
-                    <h4>John Doe</h4>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="/images/naszzespol/team2.jpg" alt="John Doe - Frontend Developer" width="270" height="260" >
-                    <h4>John Doe</h4>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="/images/naszzespol/team3.jpg" alt="John Doe - Marketing" width="270" height="260" >
-                    <h4>John Doe</h4>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="/images/naszzespol/team4.jpg" alt="John Doe - UI Designer" width="270" height="260" >
-                    <h4>John Doe</h4>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <!-- Czym się zajmujemy -->
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/czymsiezajmujemy/czym-img1.jpg"
+              alt="podpowiadamy rozwiązania"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/czymsiezajmujemy/czym-img2.jpg"
+              alt="dbamy o responsywność"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/czymsiezajmujemy/czym-img3.jpg"
+              alt="dobieramy szatę graficzną"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <!-- Nasz zespół -->
+      <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/naszzespol/team1.jpg"
+              alt="John Doe - Product Designer"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/images/naszzespol/team2.jpg"
+              alt="John Doe - Frontend Developer"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/naszzespol/team3.jpg"
+              alt="John Doe - Marketing"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/naszzespol/team4.jpg"
+              alt="John Doe - UI Designer"
+              width="270"
+              height="260"
+            />
+            <h4>John Doe</h4>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer id="contact">
-        <a href=""><span>Web</span>Studio</a><br>
-        <address>
-            <ul>
-                <li>
-                    <a target="_blank" href="https://goo.gl/maps/rPz5dUSjKDYNv8CF8">m. Warszawa, Aleje Jerozolimskie 21</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+48111111111">+48 111 111 111</a>
-                </li>
-            </ul>
-        </address>
+      <a href=""><span>Web</span>Studio</a><br />
+      <address>
+        <ul>
+          <li>
+            <a target="_blank" href="https://goo.gl/maps/rPz5dUSjKDYNv8CF8"
+              >m. Warszawa, Aleje Jerozolimskie 21</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-</body>
-
+  </body>
 </html>
