angielskie nazwy plików

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="/images/czymsiezajmujemy/czym-img1.jpg"
+              src="/images/offer/offer1.jpg"
               alt="podpowiadamy rozwiązania"
               width="370"
               height="294"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="/images/czymsiezajmujemy/czym-img2.jpg"
+              src="/images/offer/offer2.jpg"
               alt="dbamy o responsywność"
               width="370"
               height="294"
@@ -94,7 +94,7 @@
           </li>
           <li>
             <img
-              src="/images/czymsiezajmujemy/czym-img3.jpg"
+              src="/images/offer/offer3.jpg"
               alt="dobieramy szatę graficzną"
               width="370"
               height="294"
@@ -156,9 +156,9 @@
       <address>
         <ul>
           <li>
-            <a target="_blank" href="https://goo.gl/maps/rPz5dUSjKDYNv8CF8"
-              >m. Warszawa, Aleje Jerozolimskie 21</a
-            >
+            <a target="_blank" href="https://goo.gl/maps/rPz5dUSjKDYNv8CF8">
+              m. Warszawa, Aleje Jerozolimskie 21
+            </a>
           </li>
           <li>
             <a href="mailto:info@example.com">info@example.com</a>
