--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl-PL">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Studio</title>
   </head>
 
   <body>
     <header>
-      <a href=""><span>Web</span>Studio</a>
+      <a href="#"><span>Web</span>Studio</a>
       <nav>
         <ul>
           <li><a href="#">Agencja</a></li>
@@ -29,48 +29,40 @@
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługę</button>
       </section>
+
       <!-- nasze atuty -->
-      <!-- moze dodac to do sekcji wyzej albo nizej?? -->
-      <div>
+      <section>
         <ul>
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
-              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
-              laudantium tempore vel.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
-              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
-              laudantium tempore vel.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
-              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
-              laudantium tempore vel.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Perferendis nulla est quidem culpa tempore iste eos, nesciunt enim
-              error saepe. Ratione tenetur non corporis, ea excepturi aperiam
-              laudantium tempore vel.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
         </ul>
-      </div>
+      </section>
 
       <!-- Czym się zajmujemy -->
       <section>
@@ -78,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="/images/offer/offer1.jpg"
+              src="/images/offer/solutions.jpg"
               alt="podpowiadamy rozwiązania"
               width="370"
               height="294"
@@ -86,7 +78,7 @@
           </li>
           <li>
             <img
-              src="/images/offer/offer2.jpg"
+              src="/images/offer/responsiveness.jpg"
               alt="dbamy o responsywność"
               width="370"
               height="294"
@@ -94,7 +86,7 @@
           </li>
           <li>
             <img
-              src="/images/offer/offer3.jpg"
+              src="/images/offer/graphics.jpg"
               alt="dobieramy szatę graficzną"
               width="370"
               height="294"
@@ -109,7 +101,7 @@
         <ul>
           <li>
             <img
-              src="/images/naszzespol/team1.jpg"
+              src="/images/team/team_product_designer.jpg"
               alt="John Doe - Product Designer"
               width="270"
               height="260"
@@ -119,7 +111,7 @@
           </li>
           <li>
             <img
-              src="/images/naszzespol/team2.jpg"
+              src="/images/team/team_frontend_dev.jpg"
               alt="John Doe - Frontend Developer"
               width="270"
               height="260"
@@ -129,7 +121,7 @@
           </li>
           <li>
             <img
-              src="/images/naszzespol/team3.jpg"
+              src="/images/team/team_marketing.jpg"
               alt="John Doe - Marketing"
               width="270"
               height="260"
@@ -139,7 +131,7 @@
           </li>
           <li>
             <img
-              src="/images/naszzespol/team4.jpg"
+              src="/images/team/team_ui_designer.jpg"
               alt="John Doe - UI Designer"
               width="270"
               height="260"
@@ -152,7 +144,7 @@
     </main>
 
     <footer id="contact">
-      <a href=""><span>Web</span>Studio</a><br />
+      <a href="#"><span>Web</span>Studio</a>
       <address>
         <ul>
           <li>
