poprawione samozamykające sie elementy html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Studio</title>
   </head>
 
@@ -74,7 +74,7 @@
               alt="podpowiadamy rozwiązania"
               width="370"
               height="294"
-            />
+            >
           </li>
           <li>
             <img
@@ -82,7 +82,7 @@
               alt="dbamy o responsywność"
               width="370"
               height="294"
-            />
+            >
           </li>
           <li>
             <img
@@ -90,7 +90,7 @@
               alt="dobieramy szatę graficzną"
               width="370"
               height="294"
-            />
+            >
           </li>
         </ul>
       </section>
@@ -105,7 +105,7 @@
               alt="John Doe - Product Designer"
               width="270"
               height="260"
-            />
+            >
             <h4>John Doe</h4>
             <p>Product Designer</p>
           </li>
@@ -115,7 +115,7 @@
               alt="John Doe - Frontend Developer"
               width="270"
               height="260"
-            />
+            >
             <h4>John Doe</h4>
             <p>Frontend Developer</p>
           </li>
@@ -125,7 +125,7 @@
               alt="John Doe - Marketing"
               width="270"
               height="260"
-            />
+            >
             <h4>John Doe</h4>
             <p>Marketing</p>
           </li>
@@ -135,7 +135,7 @@
               alt="John Doe - UI Designer"
               width="270"
               height="260"
-            />
+            >
             <h4>John Doe</h4>
             <p>UI Designer</p>
           </li>
