dodanie . do sciezek w img

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="/images/offer/solutions.jpg"
+              src="./images/offer/solutions.jpg"
               alt="podpowiadamy rozwiązania"
               width="370"
               height="294"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="/images/offer/responsiveness.jpg"
+              src="./images/offer/responsiveness.jpg"
               alt="dbamy o responsywność"
               width="370"
               height="294"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="/images/offer/graphics.jpg"
+              src="./images/offer/graphics.jpg"
               alt="dobieramy szatę graficzną"
               width="370"
               height="294"
@@ -101,7 +101,7 @@
         <ul>
           <li>
             <img
-              src="/images/team/team_product_designer.jpg"
+              src="./images/team/team_product_designer.jpg"
               alt="John Doe - Product Designer"
               width="270"
               height="260"
@@ -111,7 +111,7 @@
           </li>
           <li>
             <img
-              src="/images/team/team_frontend_dev.jpg"
+              src="./images/team/team_frontend_dev.jpg"
               alt="John Doe - Frontend Developer"
               width="270"
               height="260"
@@ -121,7 +121,7 @@
           </li>
           <li>
             <img
-              src="/images/team/team_marketing.jpg"
+              src="./images/team/team_marketing.jpg"
               alt="John Doe - Marketing"
               width="270"
               height="260"
@@ -131,7 +131,7 @@
           </li>
           <li>
             <img
-              src="/images/team/team_ui_designer.jpg"
+              src="./images/team/team_ui_designer.jpg"
               alt="John Doe - UI Designer"
               width="270"
               height="260"
